          shape an encoder may return.
        * Some fixes to make eAccelerator compile with php 5.2, this fixes bug #150
        * Restore __toString methods correctly with php 5.2
        * Fix bug #145, objects are serialized when they are stored in shared memory.
          Users don't have to do this in their code anymore.

2006-07-25  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix restoring of opcode handler for php 5.0.5 when files are loaded
          from disk cache. This fixes bug #147
        * Some update in the release notes for the upcoming rc1
        * Fix loader.c too so we don't get any linking errors. 

2006-07-24  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Make clean routine support dir hashing. Again, this should be tested
          on win32!
        * Use a define for the magic string in the eAccelerator file headers
        * Bump up version to 0.9.5-rc1
        * Put -O2 back on for -rc1
        * Update the VC2005 project files
        * Add a config.w32 file for static building of eAccelerator

2006-07-24  Hans Rakers <hans at parse dot nl>
	* Fix for ticket #47 and #63, related to problems restoring empty
	  strings and empty string array keys from the disk cache.

2006-07-23  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix ticket #143, seems that PHP < 5 doesn't make the extension lower 
          case.

2006-07-22  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Some zval macro's differ for php4 and 5, this fixes #146.
        * Also rewrite clean code for cache files on win32 for directory 
          hashing. This hasn't been tested on windows!!!
        * Added a script to create a bugreport file with more information
          about the userenvironment.

2006-07-19  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Use some more zval macro's to cleanup things a bit
        * Removed the code from mm.c that tried to allocate more then one segment 