@@ -45,7 +45,7 @@ RSC=rc.exe
 # PROP Ignore_Export_Lib 0
 # PROP Target_Dir ""
 # ADD BASE CPP /nologo /MD /W3 /GX /O2 /D "WIN32" /D "NDEBUG" /D "_WINDOWS" /D "_MBCS" /D "_USRDLL" /YX /FD /c
-# ADD CPP /nologo /MD /W3 /GX /O2 /I "../../.." /I "../../../zend" /I "../../../TSRM" /I "../../../main" /D "NDEBUG" /D ZEND_DEBUG=0 /D "WIN32" /D "_WINDOWS" /D "_MBCS" /D "_USRDLL" /D "HAVE_EACCELERATOR" /D "COMPILE_DL_EACCELERATOR" /D "ZEND_WIN32" /D "PHP_WIN32" /D ZTS=1 /D HAVE_EXT_SESSION_PHP_SESSION_H=1 /D "WITH_EACCELERATOR_CRASH_DETECTION" /D "WITH_EACCELERATOR_OPTIMIZER" /D "WITH_EACCELERATOR_ENCODER" /D "WITH_EACCELERATOR_LOADER" /D "WITH_EACCELERATOR_SESSIONS" /D "WITH_EACCELERATOR_CONTENT_CACHING" /D "WITH_EACCELERATOR_SHM" /D "WITH_EACCELERATOR_INFO" /YX /FD /c
+# ADD CPP /nologo /MD /W3 /GX /O2 /I "../../.." /I "../../../zend" /I "../../../TSRM" /I "../../../main" /I "../../" /D "NDEBUG" /D ZEND_DEBUG=0 /D "WIN32" /D "_WINDOWS" /D "_MBCS" /D "_USRDLL" /D "HAVE_EACCELERATOR" /D "COMPILE_DL_EACCELERATOR" /D "ZEND_WIN32" /D "PHP_WIN32" /D ZTS=1 /D HAVE_EXT_SESSION_PHP_SESSION_H=1 /D "WITH_EACCELERATOR_CRASH_DETECTION" /D "WITH_EACCELERATOR_OPTIMIZER" /D "WITH_EACCELERATOR_SESSIONS" /D "WITH_EACCELERATOR_CONTENT_CACHING" /D "WITH_EACCELERATOR_SHM" /D "WITH_EACCELERATOR_INFO" /YX /FD /c
 # ADD BASE MTL /nologo /D "NDEBUG" /mktyplib203 /win32
 # ADD MTL /nologo /D "NDEBUG" /mktyplib203 /win32
 # ADD BASE RSC /l 0x409 /d "NDEBUG"
@@ -71,7 +71,7 @@ LINK32=link.exe
 # PROP Ignore_Export_Lib 0
 # PROP Target_Dir ""
 # ADD BASE CPP /nologo /MD /W3 /Gm /GX /ZI /Od /D "WIN32" /D "_DEBUG" /D "_WINDOWS" /D "_MBCS" /D "_USRDLL" /YX /FD /GZ /c
-# ADD CPP /nologo /MTd /W3 /Gm /GX /ZI /Od /I "../../.." /I "../../../zend" /I "../../../TSRM" /I "../../../main" /D "_DEBUG" /D ZEND_DEBUG=1 /D "DEBUG" /D "WIN32" /D "_WINDOWS" /D "_MBCS" /D "_USRDLL" /D "HAVE_EACCELERATOR" /D "COMPILE_DL_EACCELERATOR" /D "ZEND_WIN32" /D "PHP_WIN32" /D ZTS=1 /D HAVE_EXT_SESSION_PHP_SESSION_H=1 /D "WITH_EACCELERATOR_CRASH_DETECTION" /D "WITH_EACCELERATOR_OPTIMIZER" /D "WITH_EACCELERATOR_ENCODER" /D "WITH_EACCELERATOR_LOADER" /D "WITH_EACCELERATOR_SESSIONS" /D "WITH_EACCELERATOR_CONTENT_CACHING" /D "WITH_EACCELERATOR_SHM" /D "WITH_EACCELERATOR_INFO" /YX /FD /GZ /c
+# ADD CPP /nologo /MTd /W3 /Gm /GX /ZI /Od /I "../../.." /I "../../../zend" /I "../../../TSRM" /I "../../../main" /I "../../" /D "_DEBUG" /D ZEND_DEBUG=1 /D "DEBUG" /D "WIN32" /D "_WINDOWS" /D "_MBCS" /D "_USRDLL" /D "HAVE_EACCELERATOR" /D "COMPILE_DL_EACCELERATOR" /D "ZEND_WIN32" /D "PHP_WIN32" /D ZTS=1 /D HAVE_EXT_SESSION_PHP_SESSION_H=1 /D "WITH_EACCELERATOR_CRASH_DETECTION" /D "WITH_EACCELERATOR_OPTIMIZER" /D "WITH_EACCELERATOR_SESSIONS" /D "WITH_EACCELERATOR_CONTENT_CACHING" /D "WITH_EACCELERATOR_SHM" /D "WITH_EACCELERATOR_INFO" /YX /FD /GZ /c
 # ADD BASE MTL /nologo /D "_DEBUG" /mktyplib203 /win32
 # ADD MTL /nologo /D "_DEBUG" /mktyplib203 /win32
 # ADD BASE RSC /l 0x409 /d "_DEBUG"
@@ -98,7 +98,7 @@ LINK32=link.exe
 # PROP Ignore_Export_Lib 0
 # PROP Target_Dir ""
 # ADD BASE CPP /nologo /MTd /W3 /Gm /GX /ZI /Od /I "../../.." /I "../../../zend" /I "../../../TSRM" /I "../../../main" /D "_DEBUG" /D "WIN32" /D "_WINDOWS" /D "_MBCS" /D "_USRDLL" /D "HAVE_EACCELERATOR" /D "COMPILE_DL_EACCELERATOR" /D "ZEND_WIN32" /D "PHP_WIN32" /D ZTS=1 /D ZEND_DEBUG=1 /D HAVE_EXT_SESSION_PHP_SESSION_H=1 /D "WITH_EACCELERATOR_CRASH_DETECTION" /D "WITH_EACCELERATOR_OPTIMIZER" /D "WITH_EACCELERATOR_ENCODER" /D "WITH_EACCELERATOR_LOADER" /D "WITH_EACCELERATOR_SESSIONS" /D "WITH_EACCELERATOR_CONTENT_CACHING" /YX /FD /GZ /c
-# ADD CPP /nologo /MTd /W3 /Gm /GX /ZI /Od /I "../../.." /I "../../../zend" /I "../../../TSRM" /I "../../../main" /D "_DEBUG" /D ZEND_DEBUG=1 /D "DEBUG" /D "WIN32" /D "_WINDOWS" /D "_MBCS" /D "_USRDLL" /D "HAVE_EACCELERATOR" /D "COMPILE_DL_EACCELERATOR" /D "ZEND_WIN32" /D "PHP_WIN32" /D ZTS=1 /D HAVE_EXT_SESSION_PHP_SESSION_H=1 /D "WITH_EACCELERATOR_CRASH_DETECTION" /D "WITH_EACCELERATOR_OPTIMIZER" /D "WITH_EACCELERATOR_ENCODER" /D "WITH_EACCELERATOR_LOADER" /D "WITH_EACCELERATOR_SESSIONS" /D "WITH_EACCELERATOR_CONTENT_CACHING" /D "WITH_EACCELERATOR_SHM" /D "WITH_EACCELERATOR_INFO" /YX /FD /GZ /c
+# ADD CPP /nologo /MTd /W3 /Gm /GX /ZI /Od /I "../../.." /I "../../../zend" /I "../../../TSRM" /I "../../../main" /I "../../" /D "_DEBUG" /D ZEND_DEBUG=1 /D "DEBUG" /D "WIN32" /D "_WINDOWS" /D "_MBCS" /D "_USRDLL" /D "HAVE_EACCELERATOR" /D "COMPILE_DL_EACCELERATOR" /D "ZEND_WIN32" /D "PHP_WIN32" /D ZTS=1 /D HAVE_EXT_SESSION_PHP_SESSION_H=1 /D "WITH_EACCELERATOR_CRASH_DETECTION" /D "WITH_EACCELERATOR_OPTIMIZER" /D "WITH_EACCELERATOR_SESSIONS" /D "WITH_EACCELERATOR_CONTENT_CACHING" /D "WITH_EACCELERATOR_SHM" /D "WITH_EACCELERATOR_INFO" /YX /FD /GZ /c
 # ADD BASE MTL /nologo /D "_DEBUG" /mktyplib203 /win32
 # ADD MTL /nologo /D "_DEBUG" /mktyplib203 /win32
 # ADD BASE RSC /l 0x409 /d "_DEBUG"
@@ -125,7 +125,7 @@ LINK32=link.exe
 # PROP Ignore_Export_Lib 0
 # PROP Target_Dir ""
 # ADD BASE CPP /nologo /MD /W3 /GX /O2 /I "../../.." /I "../../../zend" /I "../../../TSRM" /I "../../../main" /D "NDEBUG" /D ZEND_DEBUG=0 /D "WIN32" /D "_WINDOWS" /D "_MBCS" /D "_USRDLL" /D "HAVE_EACCELERATOR" /D "COMPILE_DL_EACCELERATOR" /D "ZEND_WIN32" /D "PHP_WIN32" /D ZTS=1 /D HAVE_EXT_SESSION_PHP_SESSION_H=1 /D "WITH_EACCELERATOR_CRASH_DETECTION" /D "WITH_EACCELERATOR_OPTIMIZER" /D "WITH_EACCELERATOR_ENCODER" /D "WITH_EACCELERATOR_LOADER" /D "WITH_EACCELERATOR_SESSIONS" /D "WITH_EACCELERATOR_CONTENT_CACHING" /YX /FD /c
-# ADD CPP /nologo /MD /W3 /GX /O2 /I "../../.." /I "../../../zend" /I "../../../TSRM" /I "../../../main" /D "NDEBUG" /D ZEND_DEBUG=0 /D "WIN32" /D "_WINDOWS" /D "_MBCS" /D "_USRDLL" /D "HAVE_EACCELERATOR" /D "COMPILE_DL_EACCELERATOR" /D "ZEND_WIN32" /D "PHP_WIN32" /D ZTS=1 /D HAVE_EXT_SESSION_PHP_SESSION_H=1 /D "WITH_EACCELERATOR_CRASH_DETECTION" /D "WITH_EACCELERATOR_OPTIMIZER" /D "WITH_EACCELERATOR_ENCODER" /D "WITH_EACCELERATOR_LOADER" /D "WITH_EACCELERATOR_SESSIONS" /D "WITH_EACCELERATOR_CONTENT_CACHING" /D "WITH_EACCELERATOR_SHM" /D "WITH_EACCELERATOR_INFO" /YX /FD /c
+# ADD CPP /nologo /MD /W3 /GX /O2 /I "../../.." /I "../../../zend" /I "../../../TSRM" /I "../../../main" /I "../../" /D "NDEBUG" /D ZEND_DEBUG=0 /D "WIN32" /D "_WINDOWS" /D "_MBCS" /D "_USRDLL" /D "HAVE_EACCELERATOR" /D "COMPILE_DL_EACCELERATOR" /D "ZEND_WIN32" /D "PHP_WIN32" /D ZTS=1 /D HAVE_EXT_SESSION_PHP_SESSION_H=1 /D "WITH_EACCELERATOR_CRASH_DETECTION" /D "WITH_EACCELERATOR_OPTIMIZER" /D "WITH_EACCELERATOR_SESSIONS" /D "WITH_EACCELERATOR_CONTENT_CACHING" /D "WITH_EACCELERATOR_SHM" /D "WITH_EACCELERATOR_INFO" /YX /FD /c
 # ADD BASE MTL /nologo /D "NDEBUG" /mktyplib203 /win32
 # ADD MTL /nologo /D "NDEBUG" /mktyplib203 /win32
 # ADD BASE RSC /l 0x409 /d "NDEBUG"
@@ -179,14 +179,6 @@ SOURCE=..\ea_store.c
 # Begin Source File
 
 SOURCE=..\eaccelerator.c
-# End Source File
-# Begin Source File
-
-SOURCE=..\encoder.c
-# End Source File
-# Begin Source File
-
-SOURCE=..\loader.c
 # End Source File
 # Begin Source File
 
