@@ -49,8 +49,8 @@
 				AdditionalOptions="/D &quot;_CRT_SECURE_NO_DEPRECATE&quot; /D &quot;_CRT_NONSTDC_NO_DEPRECATE&quot;&#x0D;&#x0A;"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="../../..,../../../zend,../../../TSRM,../../../main"
-				PreprocessorDefinitions="NDEBUG;ZEND_DEBUG=0;WIN32;_WINDOWS;_USRDLL;HAVE_EACCELERATOR;COMPILE_DL_EACCELERATOR;ZEND_WIN32;PHP_WIN32;ZTS=1;HAVE_EXT_SESSION_PHP_SESSION_H=1;WITH_EACCELERATOR_CRASH_DETECTION;WITH_EACCELERATOR_OPTIMIZER;WITH_EACCELERATOR_ENCODER;WITH_EACCELERATOR_LOADER;WITH_EACCELERATOR_SESSIONS;WITH_EACCELERATOR_CONTENT_CACHING;WITH_EACCELERATOR_SHM;WITH_EACCELERATOR_INFO"
+				AdditionalIncludeDirectories="../../..,../../../zend,../../../TSRM,../../../main,../../"
+				PreprocessorDefinitions="NDEBUG;ZEND_DEBUG=0;WIN32;_WINDOWS;_USRDLL;HAVE_EACCELERATOR;COMPILE_DL_EACCELERATOR;ZEND_WIN32;PHP_WIN32;ZTS=1;HAVE_EXT_SESSION_PHP_SESSION_H=1;WITH_EACCELERATOR_CRASH_DETECTION;WITH_EACCELERATOR_OPTIMIZER;WITH_EACCELERATOR_SESSIONS;WITH_EACCELERATOR_CONTENT_CACHING;WITH_EACCELERATOR_SHM;WITH_EACCELERATOR_INFO"
 				StringPooling="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -143,10 +143,10 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="/D &quot;_CRT_SECURE_NO_DEPRECATE&quot;"
+				AdditionalOptions="/D &quot;_CRT_SECURE_NO_DEPRECATE&quot; /D &quot;_CRT_NONSTDC_NO_DEPRECATE&quot;&#x0D;&#x0A;"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="../../..,../../../zend,../../../TSRM,../../../main"
+				AdditionalIncludeDirectories="../../..,../../../zend,../../../TSRM,../../../main,../../"
 				PreprocessorDefinitions="NDEBUG;ZEND_DEBUG=0;WIN32;_WINDOWS;_USRDLL;HAVE_EACCELERATOR;COMPILE_DL_EACCELERATOR;ZEND_WIN32;PHP_WIN32;ZTS=1;HAVE_EXT_SESSION_PHP_SESSION_H=1;WITH_EACCELERATOR_CRASH_DETECTION;WITH_EACCELERATOR_OPTIMIZER;WITH_EACCELERATOR_ENCODER;WITH_EACCELERATOR_LOADER;WITH_EACCELERATOR_SESSIONS;WITH_EACCELERATOR_CONTENT_CACHING;WITH_EACCELERATOR_SHM;WITH_EACCELERATOR_INFO"
 				StringPooling="true"
 				RuntimeLibrary="2"
@@ -240,9 +240,9 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="/D &quot;_CRT_SECURE_NO_DEPRECATE&quot;"
+				AdditionalOptions="/D &quot;_CRT_SECURE_NO_DEPRECATE&quot; /D &quot;_CRT_NONSTDC_NO_DEPRECATE&quot;&#x0D;&#x0A;"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../..,../../../zend,../../../TSRM,../../../main"
+				AdditionalIncludeDirectories="../../..,../../../zend,../../../TSRM,../../../main,../../"
 				PreprocessorDefinitions="_DEBUG;ZEND_DEBUG=1;DEBUG;WIN32;_WINDOWS;_USRDLL;HAVE_EACCELERATOR;COMPILE_DL_EACCELERATOR;ZEND_WIN32;PHP_WIN32;ZTS=1;HAVE_EXT_SESSION_PHP_SESSION_H=1;WITH_EACCELERATOR_CRASH_DETECTION;WITH_EACCELERATOR_OPTIMIZER;WITH_EACCELERATOR_ENCODER;WITH_EACCELERATOR_LOADER;WITH_EACCELERATOR_SESSIONS;WITH_EACCELERATOR_CONTENT_CACHING;WITH_EACCELERATOR_SHM;WITH_EACCELERATOR_INFO"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -338,9 +338,9 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="/D &quot;_CRT_SECURE_NO_DEPRECATE&quot;"
+				AdditionalOptions="/D &quot;_CRT_SECURE_NO_DEPRECATE&quot; /D &quot;_CRT_NONSTDC_NO_DEPRECATE&quot;&#x0D;&#x0A;"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../..,../../../zend,../../../TSRM,../../../main"
+				AdditionalIncludeDirectories="../../..,../../../zend,../../../TSRM,../../../main,../../"
 				PreprocessorDefinitions="_DEBUG;ZEND_DEBUG=1;DEBUG;WIN32;_WINDOWS;_USRDLL;HAVE_EACCELERATOR;COMPILE_DL_EACCELERATOR;ZEND_WIN32;PHP_WIN32;ZTS=1;HAVE_EXT_SESSION_PHP_SESSION_H=1;WITH_EACCELERATOR_CRASH_DETECTION;WITH_EACCELERATOR_OPTIMIZER;WITH_EACCELERATOR_ENCODER;WITH_EACCELERATOR_LOADER;WITH_EACCELERATOR_SESSIONS;WITH_EACCELERATOR_CONTENT_CACHING;WITH_EACCELERATOR_SHM;WITH_EACCELERATOR_INFO"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -693,86 +693,6 @@
 			</File>
 			<File
 				RelativePath="..\eaccelerator.c"
-				>
-				<FileConfiguration
-					Name="Release PHP5|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug PHP5|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="..\encoder.c"
-				>
-				<FileConfiguration
-					Name="Release PHP5|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug PHP5|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="..\loader.c"
 				>
 				<FileConfiguration
 					Name="Release PHP5|Win32"
